--- a/SpaceMatch/Assembly-CSharp.csproj
+++ b/SpaceMatch/Assembly-CSharp.csproj
@@ -54,6 +54,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\InvaderVisual.cs" />
+    <Compile Include="Assets\Scripts\Points.cs" />
+    <Compile Include="Assets\Scripts\PlayerLife.cs" />
+    <Compile Include="Assets\Scripts\Bullet.cs" />
+    <Compile Include="Assets\Scripts\InvaderSpawner.cs" />
+    <Compile Include="Assets\Scripts\Invader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
